attendance fetched for any UUID without a / or //

--- a/zoom/static/style.css
+++ b/zoom/static/style.css
@@ -4,20 +4,21 @@
 }
 
 
-#meetingsList{
+#meetingsList, #occurrencesList, #attendanceList{
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     column-gap: 10px;
 }
-#meetingsList>*{
+#meetingsList>*, #occurrencesList>*, #attendanceList>*{
     flex: 0 0 20%;
 }
 
-.meeting{
+.card{
     height: 150px;
     box-sizing: border-box;
     border: 1px solid black;
     padding: 5px;
 }
+
