--- a/zoom/views/attendance.ejs
+++ b/zoom/views/attendance.ejs
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <script src="./parse2.js" defer></script>
+    <script src="script.js" defer></script>
     <title>Dojo Zoom Attendance Visualizer</title>
 </head>
 
@@ -19,23 +19,17 @@
             <h1>Dojo Zoom Attendance Visualizer</h1>
         </header>
 
-        <form id="attendance-get" class="mb-2">
-            <div class="mt-3 mb-3">
-                <input class="form-control" type="file" name="csvFile" id="csvFile" accept=".csv">
-            </div>
-            <div class="form-group mb-2">
-                <label class="form-label"  for="offset">Select Your Timezone Offset</label>
-                <select class="form-control-sm" name="offset" id="offset">
-                    <option value="-3">-3 AST</option>
-                    <option value="-2">-2 EST</option>
-                    <option value="-1">-1 CST</option>
-                    <option value="0">0 MST</option>
-                    <option value="1">1 PST</option>
-                    <option value="2">2 AKST</option>
-                </select>
-            </div>
-            <input class=" btn btn-primary" type="submit" value="Check Attendance">
-        </form>
+        <select id="usersSelect" ></select>
+        <button onclick="getMeetings()">Get Meetings</button>
+
+        <select id="meetingsList"></select>
+        <button onclick="getMeeting()">Get Occurrances</button>
+
+        <select id="occurrencesList"></select>
+        <button onclick="getAttendance()">Get Attendance</button>
+        
+
+        
         <div class="card d-flex flex-row justify-content-around mb-2 p-2">
             <div class="form-group d-flex flex-column">
                 <label class="text-dark form-label" for="first-period-start">Algo Start</label>
@@ -99,8 +93,7 @@
             </table>
         </div>
     </div>
-    <script src="./parse.js"></script>
-    <script src="./timeline.js"></script>
+    
 </body>
 
 </html>
