--- a/zoom/views/attendance.ejs
+++ b/zoom/views/attendance.ejs
@@ -8,6 +8,9 @@
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>Dojo Zoom Attendance Visualizer</title>
@@ -19,18 +22,18 @@
             <h1>Dojo Zoom Attendance Visualizer</h1>
         </header>
 
-        <select id="usersSelect" ></select>
-        <button onclick="getMeetings()">Get Meetings</button>
+        <select class="form-control-sm mt-2" id="usersSelect" ></select>
+        <button class="btn-sm btn-outline-primary" onclick="getMeetings()">Get Meetings</button>
 
-        <select id="meetingsList"></select>
-        <button onclick="getMeeting()">Get Occurrances</button>
+        <select class="form-control-sm mt-2"  id="meetingsList"></select>
+        <button class="btn-sm btn-outline-primary" onclick="getMeeting()">Get Occurrances</button>
 
-        <select id="occurrencesList"></select>
-        <button onclick="getAttendance()">Get Attendance</button>
+        <select class="form-control-sm mt-2" id="occurrencesList"></select>
+        <button class="btn-sm btn-outline-primary" onclick="getAttendance()">Get Attendance</button>
         
 
         
-        <div class="card d-flex flex-row justify-content-around mb-2 p-2">
+        <div class="card d-flex flex-row justify-content-around mb-2 p-2 mt-2">
             <div class="form-group d-flex flex-column">
                 <label class="text-dark form-label" for="first-period-start">Algo Start</label>
                 <input class="form-control-sm" type="time" name="first-period-start" id="first-period-start" placeholder="Algo Start">
