add defaults time to brackets

--- a/zoom/views/attendance.ejs
+++ b/zoom/views/attendance.ejs
@@ -36,28 +36,28 @@
         <div class="card d-flex flex-row justify-content-around mb-2 p-2 mt-2">
             <div class="form-group d-flex flex-column">
                 <label class="text-dark form-label" for="first-period-start">Algo Start</label>
-                <input class="form-control-sm" type="time" name="first-period-start" id="first-period-start" placeholder="Algo Start">
+                <input class="form-control-sm" type="time" name="first-period-start" id="first-period-start" min="06:00" max="18:00" value="09:00" >
             </div>
             <div class="form-group d-flex flex-column">
                 <label class="text-dark form-label" for="first-period-end">Algo End</label>
-                <input class="form-control-sm" type="time" name="first-period-end" id="first-period-end" placeholder="Algo End">
+                <input class="form-control-sm" type="time" name="first-period-end" id="first-period-end" value="09:45">
             </div>
             <div class="form-group d-flex flex-column">
                 <label class="text-dark form-label" for="second-period-start">Lecture Start</label>
-                <input class="form-control-sm" type="time" name="second-period-start" id="second-period-start" placeholder="Lecture Start">
+                <input class="form-control-sm" type="time" name="second-period-start" id="second-period-start" value="10:00">
             </div>
             <div class="form-group d-flex flex-column">
                 <label class="text-dark form-label" for="second-period-end">Lecture End</label>
-                <input class="form-control-sm" type="time" name="second-period-end" id="second-period-end" placeholder="Lecture End">                
+                <input class="form-control-sm" type="time" name="second-period-end" id="second-period-end" value="10:45">                
             </div>
         
             <div class="form-group d-flex flex-column">
                 <label class="text-dark form-label" for="third-period-start">Afternoon Start</label>
-                <input class="form-control-sm" type="time" name="third-period-start" id="third-period-start" placeholder="Afternoon Start">
+                <input class="form-control-sm" type="time" name="third-period-start" id="third-period-start" value="14:00">
             </div>
             <div class="form-group d-flex flex-column">
                 <label class="text-dark form-label" for="second-period-start">Lecture End</label>
-                <input class="form-control-sm" type="time" name="third-period-end" id="third-period-end" placeholder="Afternoon End">
+                <input class="form-control-sm" type="time" name="third-period-end" id="third-period-end" value="14:45">
             </div>
             <div class="form-group d-flex flex-column">
                 <label class="text-dark form-label" >update</label>
