--- a/zoom/views/attendance.ejs
+++ b/zoom/views/attendance.ejs
@@ -61,7 +61,7 @@
             </div>
             <div class="form-group d-flex flex-column">
                 <label class="text-dark form-label" >update</label>
-                <button class="form-control-sm" id="update-button" disabled>Update</button>
+                <button class="form-control-sm" id="update-button" >Update</button>
             </div>
         </div>
         <div id="stud-data" class="card text-dark p-1">
