added timeline markers

--- a/zoom/views/attendance.ejs
+++ b/zoom/views/attendance.ejs
@@ -65,12 +65,12 @@
             </div>
         </div>
         <div id="stud-data" class="card text-dark p-1">
-            <table class="table">
+            <table id="attend-table" class="table">
                 <thead>
                     <tr class="sticky-top bg-primary text-light">
                         <th class="col-1" scope="col">#</th>
                         <th class="col-2" scope="col">Name</th>
-                        <th id="time-legend" class="col-8" scope="col">
+                        <th id="" class="col-8" scope="col">
                             <div class="d-flex justify-content-between">
                                 <p class="label" id="l0">6am</p>
                                 <p class="label" id="l1" >7am</p>
@@ -91,7 +91,6 @@
                     </tr>
                 </thead>
                 <tbody id="table-body">
-
                 </tbody>
             </table>
         </div>
