--- a/zoom/views/authorize.ejs
+++ b/zoom/views/authorize.ejs
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+    <title>Coding Dojo &#9654 AV Authorize </title>
 </head>
-<body>
-    <form action="https://zoom.us/oauth/authorize?response_type=code&client_id=tPvv5m4oQLKZVJy9xGlx2A&redirect_uri=http://localhost:8000/success" method="post">
 
-        <input type="submit" value="authorize">
-    </form>
-
-    
-    
-
-    
+<body class="bg-dark">
+    <div class="container">
+        <div class="card">
+            <div class="card-header d-flex justify-content-between align-items-center">
+                <img src="https://assets.codingdojo.com/learn_platform/user/login/cd_black_logo.png" alt="CodingDojo Logo">
+                <h1>Coding Dojo <span class="reverse1 purple">&#9664</span> Zoom Attendance Visualizer Authorization</h1>
+            </div>
+            <div class="card-body">
+                <form
+                    action="https://zoom.us/oauth/authorize?response_type=code&client_id=tPvv5m4oQLKZVJy9xGlx2A&redirect_uri=http://localhost:8000/success"
+                    method="post">
+                    <p class="purple">Click here to authorize your account</p>
+                    <input class="btn btn-dark" type="submit" value="authorize">
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
