added evening timeline shift v1

--- a/zoom/views/attendance.ejs
+++ b/zoom/views/attendance.ejs
@@ -31,6 +31,8 @@
 
         <select class="form-control-sm mt-2" id="occurrencesList"></select>
         <button class="btn-sm btn-outline-primary" onclick="getAttendance()">Get Attendance</button>
+        <label for="eveningChecked">Evening?</label>
+        <input type="checkbox" id ='eveningChecked'>
         
 
         
