--- a/zoom/views/admin.ejs
+++ b/zoom/views/admin.ejs
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script>const isAdmin = false; console.log('instructor page')</script>
+    <script>const isAdmin = true;</script>
     <script src="script.js" defer></script>
     <title>Dojo Zoom Attendance Visualizer</title>
 </head>
@@ -23,6 +23,9 @@
             <h1>Coding Dojo <span class="reverse1 purple">&#9664</span>  Zoom Attendance Visualizer</h1>
             <a href="/logout" class="btn btn-close-white">Logout</a>
         </header>
+
+        <select class="form-control-sm mt-2" id="usersSelect" ></select>
+        <button class="btn-sm btn-outline-primary" onclick="getMeetings()">Get Meetings</button>
 
         <select class="form-control-sm mt-2"  id="meetingsList"></select>
         <button class="btn-sm btn-outline-primary" onclick="getMeeting()">Get Occurrances</button>
