removed excess console logs

--- a/zoom/views/attendance.ejs
+++ b/zoom/views/attendance.ejs
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script>const isAdmin = false; console.log('instructor page')</script>
+    <script>const isAdmin = false;</script>
     <script src="script.js" defer></script>
     <title>Dojo Zoom Attendance Visualizer</title>
 </head>
